tests/baselines/reference/unclosedExportClause02.errors.txt
t2.ts(1,10): error TS2304: Cannot find name 'x'.
t2.ts(1,13): error TS2304: Cannot find name 'from'.
t2.ts(2,5): error TS1005: ',' expected.
t3.ts(1,10): error TS2304: Cannot find name 'from'.
t3.ts(2,5): error TS1005: ',' expected.
t4.ts(1,10): error TS2304: Cannot find name 'x'.
t4.ts(1,17): error TS1005: ',' expected.
t4.ts(1,17): error TS2304: Cannot find name 'from'.
t4.ts(2,5): error TS1005: ',' expected.
t5.ts(1,10): error TS2304: Cannot find name 'x'.
t5.ts(1,18): error TS2304: Cannot find name 'from'.
t5.ts(2,5): error TS1005: ',' expected.


==== t1.ts (0 errors) ====
    export var x = "x";
    
==== t2.ts (3 errors) ====
    export { x, from
             ~
!!! error TS2304: Cannot find name 'x'.
                ~~~~
!!! error TS2304: Cannot find name 'from'.
        "./t1";
        ~~~~~~
!!! error TS1005: ',' expected.
    
==== t3.ts (2 errors) ====
    export { from
             ~~~~
!!! error TS2304: Cannot find name 'from'.
        "./t1";
        ~~~~~~
!!! error TS1005: ',' expected.
    
==== t4.ts (4 errors) ====
    export { x as a from
             ~
!!! error TS2304: Cannot find name 'x'.
                    ~~~~
!!! error TS1005: ',' expected.
                    ~~~~
!!! error TS2304: Cannot find name 'from'.
        "./t1";
        ~~~~~~
!!! error TS1005: ',' expected.
    
==== t5.ts (3 errors) ====
    export { x as a, from
             ~
!!! error TS2304: Cannot find name 'x'.
                     ~~~~
!!! error TS2304: Cannot find name 'from'.
        "./t1";
        ~~~~~~
!!! error TS1005: ',' expected.